vaultls/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vaultls
  namespace: vaultls
  labels:
    app: vaultls
spec:
  type: ClusterIP
  selector:
    app: vaultls
  ports:
    - name: http
      port: 80
      targetPort: 80
